--- a/api-reference/mocking-apis/matchers.mdx
+++ b/api-reference/mocking-apis/matchers.mdx
@@ -1,309 +1,277 @@
 ---
-title: "Matchers"
-description: "Comprehensive overview of built-in and extensible matchers for verifying mock function arguments. Covers matcher composition, polymorphic vs. monomorphic matchers, and custom matcher creation patterns."
+title: "Matchers in Mocks"
+description: "Catalog of built-in and extensible matchers for mock method arguments, including compositional matchers. Details usage, capabilities, and patterns for expressive, robust mock queries."
 ---
 
-# Matchers
+# Matchers in Mocks
 
-Comprehensive overview of built-in and extensible matchers for verifying mock function arguments in GoogleMock. This page explains matcher composition, polymorphic versus monomorphic matchers, and patterns for creating custom matchers.
-
----
-
-## What Are Matchers?
-
-Matchers are predicates used in expectations and assertions to specify the property that a function argument should satisfy. Rather than requiring exact values, matchers enable you to express flexible, readable constraints on the values passed to your mock methods.
-
-This section guides you through the essential use and creation of matchers, helping you verify mock function arguments precisely and expressively.
+GoogleMock provides a rich catalog of built-in argument matchers that allow you to specify precise and flexible conditions on mock method parameters. This page catalogs these matchers, explains their usages, and demonstrates best practices for creating expressive, readable, and robust mock expectations.
 
 ---
 
-## Built-in Matchers
+## Overview
 
-GoogleMock provides a rich collection of built-in matchers, including:
+Matchers in mocks serve the purpose of verifying that mock methods are called with arguments matching specific criteria. These criteria can be simple equality, comparison, string content, or complex compositions of other matchers. By leveraging matchers, your tests can express intent clearly, improve maintainability, and handle a broad variety of verification scenarios.
 
-- Wildcard matcher `_`: Matches anything.
-- Equality matchers like `Eq(value)`, or simply the value itself (e.g., `5`).
-- Comparison matchers: `Lt()`, `Le()`, `Gt()`, `Ge()`, `Ne()` for less than, less or equal, greater than, greater or equal, not equal.
-- Pointer matchers: `IsNull()`, `NotNull()`, `Ref(variable)`.
-- String matchers: `StrEq()`, `StrNe()`, `StartsWith()`, `EndsWith()`, `HasSubstr()` (works with C-style strings and STL string types).
-- Container matchers: `ElementsAre()`, `UnorderedElementsAre()`, `Contains()`, `Each()`, `SizeIs()`.
-- Tuple and pair matchers: `Pair()`, `Key()`, `FieldsAre()`.
-- Floating point matchers: `FloatEq()`, `DoubleEq()`, handling near-equality and NaN.
+### Why Use Matchers?
 
-### Example
+- **Expressiveness:** Describe expected argument properties in human-readable form.
+- **Flexibility:** Match any value, ranges, conditions, or custom predicates.
+- **Robustness:** Guard expectations against brittle exact value matches, supporting broader verification where necessary.
 
-Use the wildcard matcher to allow any argument:
+---
 
+## Core Argument Matchers
+
+The following are the primary built-in matchers you will use to specify argument conditions in mock expectations.
+
+### 1. Universal Matchers
+
+- **`_`**: Matches any argument of any type.
+- **`A<T>()` / `An<T>()`**: Matches any value of type `T`.
+
+#### Example
 ```cpp
-using ::testing::_;
-EXPECT_CALL(mock_obj, Foo(_)); // Accepts any single argument
+EXPECT_CALL(mock_obj, Foo(_));  // Accepts any argument.
+EXPECT_CALL(mock_obj, Bar(A<int>()));  // Any integer argument.
 ```
 
-Specify an argument greater than or equal to 5:
+### 2. Equality and Comparisons
 
+- **`Eq(value)`**: Matches arguments equal to `value`.
+- **`Ne(value)`**: Matches arguments not equal to `value`.
+- **`Lt(value)` / `Le(value)` / `Gt(value)` / `Ge(value)`**: Matches arguments less than, less than or equal, greater than, or greater than or equal to `value`.
+
+You can also pass literal values directly where matchers are expected, e.g., `EXPECT_CALL(mock, Foo(5))` is equivalent to `EXPECT_CALL(mock, Foo(Eq(5)))`.
+
+#### Example
 ```cpp
-using ::testing::Ge;
-EXPECT_CALL(mock_obj, Foo(Ge(5)));
+EXPECT_CALL(mock_obj, Compute(Eq(10)));  // Expect argument equals 10
+EXPECT_CALL(mock_obj, Compute(Gt(0)));  // Expect argument greater than 0
 ```
 
-Check that a pointer argument is not null:
+### 3. String Matchers
 
+- **`StrEq(str)`**: Matches strings exactly equal to `str`.
+- **`StrNe(str)`**: Matches strings not equal to `str`.
+- **`StrCaseEq(str)` / `StrCaseNe(str)`**: Case-insensitive string equality or inequality.
+- **`HasSubstr(substring)`**: Matches strings containing the given substring.
+- **`StartsWith(prefix)` / `EndsWith(suffix)`**: Matches strings that start or end with the given string.
+- **`MatchesRegex(regex)` / `ContainsRegex(regex)`**: Matches strings fully or partially matching a regex.
+
+All string matchers support `std::string`, C strings, and `string_view` types where applicable.
+
+#### Example
 ```cpp
-using ::testing::NotNull;
-EXPECT_CALL(mock_obj, ProcessData(NotNull()));
+EXPECT_CALL(mock_obj, SetName(StrEq("Alice")));
+EXPECT_CALL(mock_obj, SetName(StartsWith("Al")));
+EXPECT_CALL(mock_obj, Log(MatchesRegex("^Error:.*")));
 ```
 
-Match a string argument starting with "Error":
+### 4. Pointer Matchers
 
+- **`IsNull()` / `NotNull()`**: Matches null or non-null raw or smart pointers.
+- **`Pointee(matcher)`**: Matches a pointer whose pointee satisfies the `matcher`.
+- **`Pointer(matcher)`**: Matches a pointer that itself matches the `matcher`.
+- **`Ref(variable)`**: Matches an argument that is a reference to the specified variable.
+
+#### Example
 ```cpp
-using ::testing::StartsWith;
-EXPECT_CALL(mock_obj, LogMessage(StartsWith("Error")));
+EXPECT_CALL(mock_obj, SetBuffer(IsNull()));
+EXPECT_CALL(mock_obj, SetBuffer(Pointee(Eq(42))));
+EXPECT_CALL(mock_obj, GetReference(Ref(existing_var)));
 ```
 
-Validate a container argument with specific elements:
+### 5. Container Matchers
 
+- **`Contains(element_matcher)`**: Matches containers with any element matching `element_matcher`.
+- **`Each(element_matcher)`**: Matches containers where all elements satisfy `element_matcher`.
+- **`ElementsAre(...)` / `ElementsAreArray(...)`**: Matches containers with exactly the given elements, in order.
+- **`UnorderedElementsAre(...)` / `UnorderedElementsAreArray(...)`**: Matches containers with exactly the given elements, in any order.
+- **`IsSubsetOf(...)` / `IsSupersetOf(...)`**: Matches containers that are subsets or supersets of the given elements or matchers.
+- **`SizeIs(size_matcher)`**: Matches containers with size satisfying the `size_matcher`.
+- **`WhenSorted(matcher)` / `WhenSortedBy(comparator, matcher)`**: Matches containers sorted by the comparator satisfying `matcher`.
+- **`Pointwise(pair_matcher, rhs_container)`**: Matches containers element-wise with a pair matcher.
+
+#### Example
 ```cpp
-using ::testing::ElementsAre;
-EXPECT_CALL(mock_obj, ProcessList(ElementsAre(1, 2, 3)));
+EXPECT_CALL(mock_obj, ProcessItems(Each(Gt(0))));
+EXPECT_CALL(mock_obj, SetNames(ElementsAre("Alice", "Bob")));
+EXPECT_CALL(mock_obj, SetValues(Contains(Ge(10))));
+```
+
+### 6. Tuple and Pair Matchers
+
+- **`Pair(first_matcher, second_matcher)`**: Matches an `std::pair` whose fields satisfy the provided matchers.
+- **`FieldsAre(matchers...)`**: Matches a tuple or struct fields-wise.
+- **`Args<N1, N2, ...>(matcher)`**: Matches selected fields in a tuple.
+
+#### Example
+```cpp
+EXPECT_CALL(mock_obj, SetKeyValue(Pair(Ge(100), StartsWith("user"))));
+EXPECT_CALL(mock_obj, ProcessTuple(FieldsAre(_, Eq(42), Lt(0))));
+```
+
+### 7. Combinational Matchers
+
+- **`Not(matcher)`**: Matches anything that doesn’t satisfy `matcher`.
+- **`AllOf(matcher1, matcher2, ...)`**: Matches if *all* matchers succeed.
+- **`AnyOf(matcher1, matcher2, ...)`**: Matches if *any* matcher succeeds.
+- **`Conditional(condition, matcher_true, matcher_false)`**: Matches according to a runtime condition.
+
+#### Example
+```cpp
+EXPECT_CALL(mock_obj, Foo(AllOf(Gt(0), Lt(10))));
+EXPECT_CALL(mock_obj, Foo(AnyOf(Eq(3), Eq(5), Eq(7))));
+```
+
+### 8. Specialized Matchers
+
+- **`Truly(predicate)`**: Matches anything for which the unary predicate returns `true`.
+- **`Optional(value_matcher)`**: Matches optional-like objects whose value satisfies the matcher.
+- **`VariantWith<T>(matcher)`**: Matches variant types that hold a `T` satisfying the matcher.
+- **`AnyWith<T>(matcher)`**: Matches `std::any` that contains a `T` satisfying the matcher.
+- **`DistanceFrom(target, matcher)`** or **`DistanceFrom(target, get_distance, matcher)`**: Matches values where distance from `target` matches the matcher.
+
+#### Example
+```cpp
+EXPECT_CALL(mock_obj, ProcessValue(Truly(IsPositive)));
+EXPECT_CALL(mock_obj, HandleOptional(Optional(Eq(42))));
 ```
 
 ---
 
-## Combining Matchers
+## Using Matchers in Mock Expectations
 
-Matchers can be composed using logical combinators:
+Matchers define the criteria against which mock calls’ arguments are checked in `EXPECT_CALL` and `ON_CALL` statements.
 
-- `AllOf(m1, m2, ...)`: Matches if all sub-matchers match.
-- `AnyOf(m1, m2, ...)`: Matches if any sub-matcher matches.
-- `Not(m)`: Matches if the sub-matcher does not match.
-
-Example:
+### Defining Expectations
 
 ```cpp
-using ::testing::AllOf;
-using ::testing::Gt;
-using ::testing::Ne;
-EXPECT_CALL(mock_obj, Foo(AllOf(Gt(5), Ne(10))));
+// Expects Bar() to be called with an int argument > 0 and a string starting with "foo".
+EXPECT_CALL(mock_obj, Bar(Gt(0), StartsWith("foo")));
 ```
 
-This expects `Foo` to be called with an argument greater than 5 but not equal to 10.
+### Composing Matchers
 
----
-
-## Polymorphic vs. Monomorphic Matchers
-
-### Monomorphic Matchers
-
-- Matchers of type `Matcher<T>` that match values of exactly one specific type `T`.
-- Match and describe values of said type.
-
-Example: `Matcher<int>` matches only values of type `int`.
-
-### Polymorphic Matchers
-
-- Matchers that can match values of multiple types and can be converted to `Matcher<T>` as needed.
-- Implemented typically as matcher factories returning polymorphic wrappers.
-
-Example: `Eq(5)` can match `int`, `long`, `unsigned`, `double`, etc.
-
-Most built-in matchers are polymorphic to allow flexible usage without specifying exact types.
-
----
-
-## Casting Matchers
-
-GoogleMock enforces matcher type safety, but provides utility functions:
-
-- `SafeMatcherCast<T>(matcher)`: Casts `matcher` to a matcher of type `T` safely, ensuring implicit convertibility without losing data.
-- `MatcherCast<T>(matcher)`: Casts `matcher` to `Matcher<T>` less restrictively but potentially unsafely; use with caution.
-
-Example:
+Combine multiple matchers logically to express complex argument conditions:
 
 ```cpp
-using ::testing::SafeMatcherCast;
-Matcher<Base*> base_matcher = ...;
-EXPECT_CALL(mock_obj, Foo(SafeMatcherCast<Derived*>(base_matcher)));
+EXPECT_CALL(mock_obj, Baz(AllOf(Ge(10), Le(20))));  // Argument between 10 and 20.
+EXPECT_CALL(mock_obj, Baz(AnyOf(Eq(5), Eq(15), Eq(25))));  // Argument equal to any of these.
 ```
 
----
+### Providing Custom Matchers
 
-## Using Matchers to Match Complex Argument Patterns
-
-### Multi-argument Matchers and `.With()` clause
-
-You can specify a matcher that matches *all* arguments as a tuple using the `With()` clause on `EXPECT_CALL`:
+You can define your own matchers using the `MATCHER` macros. For example:
 
 ```cpp
-using ::testing::_;
-using ::testing::Lt;
-EXPECT_CALL(foo, InRange(_, _)).With(Lt());
-```
-
-Here `With(Lt())` indicates the first argument must be less than the second argument.
-
-You can also select specific argument positions with `Args<idx...>(matcher)`, e.g.,
-
-```cpp
-EXPECT_CALL(foo, Blah).With(AllOf(Args<0,1>(Lt()), Args<1,2>(Lt())));
-```
-
-This enforces `arg0 < arg1 < arg2`.
-
-### Matching Members and Properties of Objects
-
-To match parts of an argument object, use:
-
-- `Field(&Class::member, matcher)`: Matches if the member variable of an object satisfies the matcher.
-- `Property(&Class::getter, matcher)`: Matches if the return value of the getter method satisfies the matcher.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, Foo(Field(&Foo::number, Ge(3))));
-```
-
-Matches a `Foo` object whose `number` member is at least 3.
-
-### Matching Value Pointed to by Pointer
-
-Use `Pointee(matcher)` to match a pointer argument whose pointee value matches the matcher.
-
-```cpp
-EXPECT_CALL(mock, Foo(Pointee(Ge(3))));
-```
-
-Matches if pointer points to a value greater or equal to 3.
-
-Nested `Pointee()` can match pointer to pointer, e.g., `Pointee(Pointee(Lt(3)))`.
-
----
-
-## Defining Custom Matchers
-
-### Using MATCHER Macros
-
-The simplest way to create a custom matcher is with the `MATCHER` family:
-
-```cpp
-MATCHER(IsDivisibleBy7, "") {
-  return (arg % 7) == 0;
+MATCHER(IsEven, "") {
+  return (arg % 2) == 0;
 }
 
-EXPECT_CALL(mock_obj, Foo(IsDivisibleBy7()));
+EXPECT_CALL(mock_obj, Foo(IsEven()));
 ```
 
-You can add detailed failure messages:
+---
+
+## Best Practices and Tips
+
+- **Use matchers over raw values when argument constraints are flexible.** This helps avoid brittle tests.
+- **Prefer built-in matchers for common cases**, they provide better error messages and clarity.
+- **Combine matchers for precise checks,** such as `AllOf`, `AnyOf`.
+- **Use `Ref(variable)` to match specific references** to important test data.
+- **Use container and tuple matchers to verify structured data** effectively.
+- **Write custom matchers for reusable, complex conditions** to maintain test clarity.
+
+---
+
+## Common Pitfalls and Troubleshooting
+
+- Using equality matchers (`Eq`) on C strings compares pointer identity, not string content. Use string matchers like `StrEq` instead.
+- Expect precise argument values only when necessary; otherwise prefer flexible matchers to prevent test brittleness.
+- Be mindful when matching pointer arguments; use `Pointee` or `Pointer` matchers appropriately.
+- Avoid mixing raw values and matchers inconsistently in complex function signatures; use matchers for all parameters if mixing is suspected to cause issues.
+
+---
+
+## Example: Verifying Mock Calls with Matchers
 
 ```cpp
-MATCHER(IsDivisibleBy7, "") {
-  if ((arg % 7) == 0) return true;
-  *result_listener << "the remainder is " << (arg % 7);
-  return false;
-}
-```
-
-Parameterizing the matcher:
-
-```cpp
-MATCHER_P(HasAbsoluteValue, value, "") {
-  return abs(arg) == value;
-}
-EXPECT_THAT(x, HasAbsoluteValue(10));
-```
-
-You can define multi-parameter matchers using `MATCHER_P2`, `MATCHER_P3`, etc.
-
-### Defining Matcher Classes
-
-For larger or widely reused matchers, define a matcher class implementing the interface:
-
-- `bool MatchAndExplain(const T& value, std::ostream* listener) const`
-- `void DescribeTo(std::ostream* os) const`
-- `void DescribeNegationTo(std::ostream* os) const`
-
-Example for `int` divisible by 7:
-
-```cpp
-class DivisibleBy7Matcher {
+class Foo {
  public:
-  using is_gtest_matcher = void;
-  bool MatchAndExplain(int n, std::ostream* os) const {
-    bool result = (n % 7) == 0;
-    if (!result && os != nullptr) {
-      *os << "the remainder is " << (n % 7);
-    }
-    return result;
-  }
-  void DescribeTo(std::ostream* os) const { *os << "is divisible by 7"; }
-  void DescribeNegationTo(std::ostream* os) const { *os << "is not divisible by 7"; }
+  virtual ~Foo() = default;
+  virtual int Bar(int x, const std::string& s) = 0;
 };
 
-Matcher<int> DivisibleBy7() {
-  return DivisibleBy7Matcher();
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, Bar, (int x, const std::string& s), (override));
+};
+
+TEST(MockFooTest, MatcherExample) {
+  MockFoo mock;
+  EXPECT_CALL(mock, Bar(Gt(0), StartsWith("prefix"))).Times(2);
+
+  mock.Bar(5, "prefix123");  // Matches
+  mock.Bar(10, "prefixXYZ"); // Matches
 }
 ```
 
-### Polymorphic Matchers
+In this example, the `EXPECT_CALL` uses two matchers to specify that:
+- The first parameter must be greater than 0
+- The second parameter must be a string starting with "prefix"
 
-To support multiple types, make `MatchAndExplain` a template method:
-
-```cpp
-class NotNullMatcher {
- public:
-  using is_gtest_matcher = void;
-  template <typename T>
-  bool MatchAndExplain(T* p, std::ostream*) const {
-    return p != nullptr;
-  }
-  void DescribeTo(std::ostream* os) const { *os << "is not NULL"; }
-  void DescribeNegationTo(std::ostream* os) const { *os << "is NULL"; }
-};
-
-NotNullMatcher NotNull() { return NotNullMatcher(); }
-```
+The expectation is that the `Bar` method will be called exactly twice with matching arguments.
 
 ---
 
-## Matcher Usage Tips
+## Writing Custom Matchers
 
-- Matchers must be *pure functions* without side effects since gMock may call them multiple times, in any order.
-- You can store complex matchers in variables for reuse, improving performance and clarity.
-- Use parameterized matchers to create more expressive and informative assertions.
-- Combine matchers robustly to avoid brittle tests by specifying only what truly matters.
+You can define custom matchers to encapsulate complex or frequently used argument checks:
+
+```cpp
+MATCHER(IsEven, "checks if a number is even") {
+  return (arg % 2) == 0;
+}
+
+// Usage
+EXPECT_CALL(mock, Foo(IsEven()));
+```
+
+Use `MATCHER_P`, `MATCHER_P2`, etc., macros to define parameterized matchers.
 
 ---
 
 ## Summary
 
-Matchers in GoogleMock let you specify expectations on function arguments with flexible, readable constraints. From simple equality to complex nested properties, and from built-in polymorphic matchers to powerful custom matcher definitions, they provide the expressive foundation to verify interactions in your tests.
+Matchers empower you to express expectations on mock call arguments precisely. GoogleMock’s extensive set of predefined matchers address nearly all common testing needs for argument verification, with support for core types, containers, pointers, tuples, and even custom logic.
 
-When defining custom matchers, prefer `MATCHER*` macros for simplicity or implement the matcher interface directly for explicit control and polymorphism.
-
-Finally, use matcher combinators and carefully choose matchers to write maintainable, robust tests that capture your intent precisely.
+Use these matchers to write test code that is clear, maintainable, and robust. Combine and customize matchers as your testing scenarios require.
 
 ---
 
-## Related Documentation
-
-- [gMock Cookbook - Using Matchers](https://google.github.io/googletest/gmock_cook_book.html#Using_Matchers)
-- [Matchers Reference](reference/matchers.md) (full built-in matchers)
-- [Mocking Reference](reference/mocking.md#EXPECT_CALL) (using matchers in expectations)
-- [Writing Custom Matchers Guide](guides/advanced-testing-patterns/custom-assertions-matchers.md)
-- [Using Matchers in Assertions](reference/assertions.md#EXPECT_THAT)
-- [gMock for Dummies - Expectations and Matchers](https://google.github.io/googletest/gmock_for_dummies.html#Match)
+<Accordion title="Additional Resources">
+- [GoogleTest Assertions Reference](/docs/reference/assertions.md) — for integrating matchers in assertions.
+- [GoogleMock Matchers Source Code (gmock-matchers.h)](https://github.com/google/googletest/blob/main/googlemock/include/gmock/gmock-matchers.h) — for detailed implementation.
+- [Guide to Mocking: Creating Mock Classes and Setting Expectations](/guides/mocking-techniques/mock-classes-expectations) — for end to end usage including matchers.
+- [Working with Actions and Matchers](/guides/mocking-techniques/working-with-actions-matchers) — deeper usage with matchers.
+</Accordion>
 
 ---
 
-## Troubleshooting & Best Practices
+## Mermaid Diagram: Matcher Usage Flow
 
-- Always set expectations before calling mock methods.
-- Avoid overly restrictive matchers; use wildcard `_` when argument value doesn’t matter.
-- For overloaded methods, specify matchers carefully to disambiguate.
-- Suppress uninteresting call warnings with `NiceMock` if they clutter output.
-- Use `SafeMatcherCast` to resolve type mismatches safely.
+```mermaid
+sequenceDiagram
+  participant Test as TestCode
+  participant Mock as MockObject
+  participant Matcher as Matcher
 
----
+  Test->>Mock: EXPECT_CALL with Matcher(s)
+  Mock-->>Matcher: Evaluates argument matches
+  Matcher-->>Mock: Returns match result with explanation
+  Mock-->>Test: Verifies call with argument match
+```
 
-This page empowers you to leverage GoogleMock's matcher framework fully, bridging the gap between test intent and robust, maintainable test code.
-
-<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/include/gmock/gmock-matchers.h", "range": "1-478"},{"path": "docs/gmock_cook_book.md", "range": "431-988"},{"path": "googlemock/test/gmock-matchers_test.h", "range": "50-678"}]}/>
+This sequence illustrates the flow of how an argument matcher participates in a mock expectation.
