--- a/api-reference/mocking-apis/mock-behaviors.mdx
+++ b/api-reference/mocking-apis/mock-behaviors.mdx
@@ -1,188 +1,206 @@
 ---
-title: "Mock Object Behaviors: Nice, Naggy, Strict"
-description: "Outlines the available wrappers to control how uninteresting or unexpected interactions with mock objects are handled. Describes the behaviors of NiceMock, NaggyMock, and StrictMock, providing practical guidance for choosing the right level of enforcement."
+title: "Mock Behaviors: Strict, Nice, Naggy"
+description: "Explores configuring how mocks react to unexpected calls using NiceMock, StrictMock, and NaggyMock wrappers. Guides users in balancing strictness with test maintainability and diagnostics."
 ---
 
-# Mock Object Behaviors: Nice, Naggy, Strict
+# Mock Behaviors: Strict, Nice, Naggy
 
-GoogleMock offers three predefined wrappers to control how mock objects handle **uninteresting calls**—calls to mock methods that are invoked but not explicitly expected. Understanding these behaviors helps you balance test strictness, noise, and flexibility for your testing needs.
-
----
-
-## Overview
-
-When you create a mock object in GoogleMock, any call to a method without an expectation (`EXPECT_CALL`) is considered **uninteresting**. How GoogleMock treats these uninteresting calls depends on which wrapper you use:
-
-| Wrapper            | Behavior on Uninteresting Calls              | Typical Use Case
-|--------------------|----------------------------------------------|-----------------
-| `NiceMock<T>`      | Suppresses warnings; calls proceed silently | General use, when uninteresting calls are permissible
-| `NaggyMock<T>`     | Prints warnings on uninteresting calls       | Default, helpful to identify unplanned calls
-| `StrictMock<T>`    | Fails test on uninteresting calls            | Enforce strict call compliance
-
-These wrappers work by modifying the reaction of the mock object to uninteresting calls without affecting expectations that are explicitly set.
+GoogleMock provides powerful mechanisms for controlling how mocks behave when they receive unexpected or uninteresting calls. This page explains the three primary mock behaviors—**StrictMock**, **NiceMock**, and **NaggyMock**—and guides you on choosing the right level of strictness to balance test reliability, maintainability, and diagnostics.
 
 ---
 
-## Using the Wrappers
+## Understanding Uninteresting vs. Unexpected Calls
 
-The wrappers `NiceMock<T>`, `NaggyMock<T>`, and `StrictMock<T>` are **template** subclasses of your mock class `T`. They can be used anywhere your mock `T` would be accepted.
+Before diving into mock behaviors, it's crucial to grasp the distinction between *uninteresting* and *unexpected* calls:
+
+- **Uninteresting Calls** are invocations of mock methods that have **no `EXPECT_CALL` matcher set**. The test is not explicitly verifying these calls.
+- **Unexpected Calls** occur when there **are** expectations set for a method, but a call’s arguments do **not** match any existing `EXPECT_CALL`.
+
+> **Important:**
+> - Unexpected calls are always errors.
+> - Uninteresting calls are allowed by default but produce warnings to help detect potential issues.
+
+---
+
+## Mock Behavior Wrappers
+
+GoogleMock supplies three wrapper templates to modify mock object behavior regarding uninteresting calls:
+
+| Mock Type             | Behavior on Uninteresting Calls                            | Typical Use Case                              |
+|-----------------------|------------------------------------------------------------|----------------------------------------------|
+| `NiceMock<T>`         | Suppresses warnings; quietly allows uninteresting calls.   | When you prefer fewer distractions and want to 
+|                       |                                                            | focus only on failing expectations.            |
+| `NaggyMock<T>` _(default)_ | Prints warnings for uninteresting calls.                   | Default mock type; useful during test development 
+|                       |                                                            | to detect unplanned calls.                      |
+| `StrictMock<T>`       | Treats uninteresting calls as test failures.               | For precise verification and catching 
+|                       |                                                            | unintended calls strictly.                       |
+
+### General Usage Pattern
+
+Using any of these is simple; they wrap any mock class `MockClass` and behave as a subclass.
 
 ```cpp
 using ::testing::NiceMock;
 using ::testing::NaggyMock;
 using ::testing::StrictMock;
 
-// Example mock class
-class MockFoo {
+// NiceMock example
+NiceMock<MockClass> nice_mock;
+EXPECT_CALL(nice_mock, DoSomething());
+
+// NaggyMock (default) example
+NaggyMock<MockClass> naggy_mock;
+EXPECT_CALL(naggy_mock, DoSomething());
+
+// StrictMock example
+StrictMock<MockClass> strict_mock;
+EXPECT_CALL(strict_mock, DoSomething());
+```
+
+Additionally, `NiceMock` and `StrictMock` transparently inherit constructors from the base mock class, so you can construct them with the same arguments.
+
+---
+
+## Behavior Details and Guidance
+
+### NiceMock
+
+- Suppresses all warnings about uninteresting calls.
+- Useful to reduce noise when you only want to verify selected expectations.
+- Uninteresting calls proceed with their default actions.
+- Does **not** suppress errors on unexpected calls.
+
+<Note>
+NiceMock only affects mock methods defined **directly** with `MOCK_METHOD` in the wrapped mock class. Methods inherited from base classes might not be managed as expected.
+</Note>
+
+### NaggyMock
+
+- The default behavior of mock objects.
+- Uninteresting calls generate warnings.
+- Helps catch unexpected calls you might have forgotten to set expectations for.
+- Continues test execution after warnings.
+
+### StrictMock
+
+- Treats uninteresting calls as test failures.
+- Forces precise expectation specification.
+- Helps detect any unintended interaction during test execution.
+- Useful for strict verification and when you require no surprises in mock interactions.
+
+<Warning>
+Use StrictMock sparingly. It can make tests brittle and difficult to maintain, especially if your production code undergoes refactoring without interface changes.
+</Warning>
+
+---
+
+## Practical Tips for Choosing Mock Strictness
+
+1. **Default to NiceMock** when writing robust tests that verify meaningful interactions but do not need to catch every trivial call.
+2. **Use NaggyMock** (default) during active test development or debugging to get warnings for potentially overlooked calls.
+3. **Reserve StrictMock** for critical interface contracts where every call must be exactly verified or where no extra calls should occur.
+
+<Callout>
+Carefully consider the trade-off between test maintainability and strictness. Excessive strictness can cause tests to fail from harmless internal changes, increasing maintenance effort.
+</Callout>
+
+---
+
+## Addressing Common Scenarios
+
+### How to Suppress Specific Uninteresting Call Warnings
+
+If you want to keep NaggyMock behavior but suppress warnings for certain methods, explicitly allow any number of calls via `EXPECT_CALL` with `Times(AnyNumber())`:
+
+```cpp
+EXPECT_CALL(mock, SomeMethod(_)).Times(::testing::AnyNumber());
+```
+
+This combination tells GoogleMock that calls to `SomeMethod` are expected and should not issue uninteresting call warnings.
+
+### What Happens if You Mix Wrappers?
+
+Nesting wrappers like `NiceMock<StrictMock<MockClass>>` is **not supported** and will not behave correctly.
+
+### Virtual Destructors Are Important
+
+Mocks wrapped by NiceMock or StrictMock require the underlying mock class to have a **virtual destructor** to ensure proper behavior.
+
+<Warning>
+Mock classes lacking virtual destructors may exhibit undefined or incorrect behavior when used with `NiceMock` or `StrictMock`.
+</Warning>
+
+---
+
+## Example: Using Different Mock Strictness Levels
+
+```cpp
+#include <gmock/gmock.h>
+using ::testing::NiceMock;
+using ::testing::NaggyMock;
+using ::testing::StrictMock;
+
+class MockPrinter {
  public:
-  MOCK_METHOD(void, DoSomething, (), ());
+  MOCK_METHOD(void, Print, (const std::string& text), ());
 };
 
-// Using NiceMock: suppress warnings on uninteresting calls
-NiceMock<MockFoo> nice_mock_foo;
-EXPECT_CALL(nice_mock_foo, DoSomething());
+TEST(MockStrictnessTest, DemonstratesMockBehavior) {
+  NiceMock<MockPrinter> nice_printer;
+  NaggyMock<MockPrinter> naggy_printer;
+  StrictMock<MockPrinter> strict_printer;
 
-// Using NaggyMock (the default mock behavior): warn on uninteresting calls
-NaggyMock<MockFoo> naggy_mock_foo;
-EXPECT_CALL(naggy_mock_foo, DoSomething());
+  // Set expected calls only for 'Print' method
+  EXPECT_CALL(nice_printer, Print("hello"));
+  EXPECT_CALL(naggy_printer, Print("hello"));
+  EXPECT_CALL(strict_printer, Print("hello"));
 
-// Using StrictMock: fail tests on uninteresting calls
-StrictMock<MockFoo> strict_mock_foo;
-EXPECT_CALL(strict_mock_foo, DoSomething());
+  // Calling an uninteresting method 'Print' with an argument different than 'hello'
+  nice_printer.Print("ignored");   // No warning, no failure
+  naggy_printer.Print("ignored");  // Warning printed
+  strict_printer.Print("ignored"); // Test failure
+
+  nice_printer.Print("hello");
+  naggy_printer.Print("hello");
+  strict_printer.Print("hello");
+}
 ```
-
-**Note:** These wrappers inherit constructors from the wrapped class, so you can pass any constructor arguments used by `T`.
-
----
-
-## Behavior Details
-
-### NiceMock<T>
-- **Suppresses warnings** for any uninteresting call to mock methods without expectations.
-- Allows uninteresting calls to proceed quietly, performing the default action (e.g., returning default values).
-- Useful for tests where uninteresting calls are expected and acceptable, reducing noise in test output.
-
-### NaggyMock<T>
-- The **default behavior** for plain mock objects.
-- Prints a **warning message** every time an uninteresting call occurs.
-- Warns you about potential unintended calls to mock methods without explicit expectations.
-- Recommended when developing or debugging tests to catch unexpected mock interactions.
-
-### StrictMock<T>
-- Treats every uninteresting call as a **test failure**.
-- If a mock method without an expectation is called, the test fails immediately.
-- Useful when you want to **strictly verify** that no calls other than explicitly expected ones occur.
-- Ideal for enforcing exact interaction contracts during testing.
-
----
-
-## Practical Guidance
-
-### When to Use Which
-
-- Use **`NiceMock<T>`** to keep tests clean and focused when extra mock calls are benign or irrelevant to the validation.
-- Use **`NaggyMock<T>`** if you want to be notified of unexpected calls but do not want tests to fail immediately.
-- Use **`StrictMock<T>`** when ensuring no unmocked calls occur is critical, such as in highly strict unit tests.
-
-### Controlling Behavior for Specific Methods
-
-You can fine-tune uninteresting call behavior method by method by explicitly adding `EXPECT_CALL(...).Times(AnyNumber())` for methods you want to ignore warnings or errors on.
-
-```cpp
-EXPECT_CALL(mock_foo, SomeMethod(_)).Times(AnyNumber());
-```
-
-This treats calls to `SomeMethod` as interesting, avoiding warnings.
-
-### Limitations
-- Wrappers only affect **methods defined with `MOCK_METHOD` directly in your mock class**. Inherited or indirectly defined mocks may not obey the wrapper behavior.
-- The destructor of the mock class should be virtual for proper behavior.
-- You **cannot nest** wrappers, e.g., `NiceMock<StrictMock<T>>` is unsupported.
-
----
-
-## Common Usage Patterns
-
-### Catch-All Expectations
-
-Sometimes, to allow a method to be called with any arguments any number of times without warnings or failures, you add a general expectation:
-
-```cpp
-using ::testing::_;
-using ::testing::AnyNumber;
-
-EXPECT_CALL(mock_foo, MethodName(_)).Times(AnyNumber());
-```
-
-This approach is preferable to suppress warnings by default, especially if you do not want to use `NiceMock`.
-
-### Example: Strict Enforcement
-
-```cpp
-class MockDatabase {
- public:
-  MOCK_METHOD(void, Connect, (), ());
-  MOCK_METHOD(void, Disconnect, (), ());
-  MOCK_METHOD(bool, Query, (const std::string&), ());
-};
-
-StrictMock<MockDatabase> mock_db;
-
-EXPECT_CALL(mock_db, Connect());
-EXPECT_CALL(mock_db, Query("SELECT * FROM users"))
-    .Times(1)
-    .WillOnce(Return(true));
-EXPECT_CALL(mock_db, Disconnect());
-
-// Any other mock_db calls without expectations will cause a test failure.
-```
-
-This ensures that no unexpected calls slip by unnoticed.
 
 ---
 
 ## Troubleshooting
 
-### Unexpected Uninteresting Call Warnings or Failures
+### Warning About Uninteresting Calls:
+If you receive "Uninteresting mock function call" warnings,
+  - Confirm whether you intended to allow the call.
+  - Add a `EXPECT_CALL` with `Times(AnyNumber())` to suppress warnings for that method.
+  - If you want to suppress all warnings, wrap the mock in `NiceMock`.
 
-- If your test outputs warnings about uninteresting calls, verify if you really intend to allow the method to be called without expectation. If so, add `EXPECT_CALL(...).Times(AnyNumber())` or use `NiceMock`.
-- If your test fails due to uninteresting calls in `StrictMock`, reconsider your expectations or wrap the mock as `NaggyMock` or `NiceMock` if failure is too strict.
+### Unexpected Calls Causing Failures:
+If your test fails because of unexpected calls,
+  - Verify that you have set expectations for all mock methods that should be called.
+  - Use more general matchers or an `EXPECT_CALL` with `_` matcher and appropriate cardinality.
 
-### No Effect of Wrapper Behavior
-
-- Confirm that the mock methods are declared in the mock class directly using `MOCK_METHOD`. Methods inherited from a base mock class may not be influenced by the wrapper.
-- Check that destructors in the mock class hierarchy are `virtual`.
-
----
-
-## Summary
-
-- `NiceMock<T>` suppresses uninteresting call warnings.
-- `NaggyMock<T>` (default) prints warnings on uninteresting calls.
-- `StrictMock<T>` treats uninteresting calls as test failures.
-- Use wrappers by templating on your mock class.
-- Control individual method behavior using `EXPECT_CALL(...).Times(AnyNumber())`.
-- Proper virtual destructors and direct mock declarations are needed for wrappers to work.
+### StrictMock Not Working as Expected:
+  - Check that the mock class has a virtual destructor.
+  - Confirm the mock methods are declared with `MOCK_METHOD` in the class being wrapped.
 
 ---
 
-## Related Documentation
+## Additional Resources
 
-- [EXPECT_CALL](reference/mocking.md#EXPECT_CALL) – Setting expectations and behaviors.
-- [ON_CALL](reference/mocking.md#ON_CALL) – Setting default behaviors for mock methods.
-- [Mocking Reference](docs/reference/mocking.md) – Comprehensive guide to GoogleMock mocking.
-- [gMock Cookbook: The Nice, the Strict, and the Naggy](docs/gmock_cook_book.md#NiceStrictNaggy) – Practical examples and advice.
-- [Matchers Reference](reference/matchers.md) – About argument matchers.
-
----
-
-## Additional Tips
-
-- Start with `NaggyMock` to identify unexpected calls during test development.
-- Switch to `NiceMock` in mature tests to reduce noise from benign calls.
-- Use `StrictMock` sparingly, mainly when verification of exact call sets is crucial.
-- Always declare mock methods in the mock class with `MOCK_METHOD` for wrapper support.
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [gMock Cookbook - Nice, Naggy, Strict Mocks](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
+- [Creating Mock Classes and Setting Expectations](https://google.github.io/googletest/guides/mocking.html#mock-classes-expectations)
+- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html)
+- [Expectations and Actions](https://google.github.io/googletest/reference/mocking.html#expectations-actions)
 
 ---
 
-With these behaviors at your fingertips, you have granular control over how strict your mocks are during testing, enabling both flexible and robust test suites tailored to your project's needs.
+Utilizing NiceMock, NaggyMock, and StrictMock effectively empowers you to craft tests that are clear, robust, and aligned with your verification goals. Choose the level of strictness that best fits your testing strategy to balance informative diagnostics with maintainable and expressive tests.
+
+<Check>
+- Prefer `NiceMock` for general testing scenarios to reduce noise.
+- Use `NaggyMock` when developing or debugging tests to receive warnings.
+- Resort to `StrictMock` only when you require enforcement that uninteresting calls must not occur.
+</Check>
